<resources>
    <string name="app_name">Orefoo - Shipper</string>
    <string name="tracking_enabled_notif">Đang chia sẻ vị trí của bạn tới khách hàng.</string>
    <string name="orefoo_email">orefoo@gmail.com</string>
    <string name="orefoo_password">orefoo</string>
    <string name="firebase_path">location</string>
    <string name="order">Đơn hàng</string>
    <string name="manager">Quản lý</string>
    <string name="revenue">Thu nhập</string>
    <string name="me">Tôi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="receive_order">Nhận đơn</string>
    <string name="receiving_orders">Đang nhận đơn</string>
    <string name="not_receiving_orders">Dừng nhận đơn</string>
    <string name="socket_timeout">Mạng không ổn định</string>
    <string name="dish">" món"</string>
    <string name="order_at">Đặt hàng lúc:</string>
    <string name="accept">Chấp nhận</string>
    <string name="reject">Từ chối</string>
    <string name="order_info">Thông tin đơn hàng</string>
    <string name="login">Đăng nhập</string>
    <string name="or">hoặc</string>
    <string name="signup">Đăng ký</string>
    <string name="managerprofile">Quản lý hồ sơ</string>
    <string name="setting">Cài đặt</string>
    <string name="about">Thông tin</string>
    <string name="logout">Đăng xuất</string>
    <string name="appversion">Phiên bản 1.0.0</string>
    <string name="logout_success">Đã đăng xuất</string>
    <string name="gotoregister">Đăng ký tài khoản</string>
    <string name="username">Tên tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="gotologin">Quay lại đăng nhập</string>
    <string name="fullname">Họ và tên</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="DOB">Ngày sinh</string>
    <string name="current_address">Nơi ở hiện tại</string>
    <string name="cmnd">Số CMND/Thẻ căn cước</string>
    <string name="noi_cap">Nơi cấp</string>
    <string name="ngay_cap">Ngày cấp</string>
    <string name="image_cmnd">Ảnh chụp giấy CMND/Thẻ căn cước</string>
    <string name="front">Mặt trước</string>
    <string name="back">Mặt sau</string>
    <string name="save_info">Lưu thông tin</string>
    <string name="remove">remove image</string>
    <string name="enough_images">Bạn cần chụp 2 mặt</string>
    <string name="pick_image_intent_text">"  Chọn ảnh"</string>
    <string name="signup_success">Đăng ký thành công</string>
    <string name="signup_failed">Đăng ký thất bại</string>
    <string name="io_exception">IO Exception</string>
    <string name="check_internet_conection">Kiểm tra kết nối internet</string>
    <string name="invalid_input">Không hợp lệ</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="incorrect_username_password">Sai mật khẩu hoặc tên tài khoản</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="first_name">Tên</string>
    <string name="last_name">Họ</string>
    <string name="gender">Giới tính</string>
    <string name="driver_license">Số giấy phép lái xe</string>
    <string name="account_conflict">Tài khoản đã được sử dụng</string>
    <string name="update_success">Cập nhật thành công</string>
    <string name="conflict_phone">Số điện thoại đã được sử dụng</string>
    <string name="conflict_email">Email đã được sử dụng</string>
    <string name="update_failed">Cập nhật không thành công</string>
    <string name="verified">Đã xác thực</string>
    <string name="waiting_verify">Đang chờ xác thực</string>
    <string name="no_verified">Chưa xác thực</string>
    <string name="error">Lỗi</string>
    <string name="received_orders">Đã nhận đơn</string>
    <string name="branch">Thông tin cửa hàng</string>
    <string name="customer_order">Món khách đặt</string>
    <string name="managerorder">Quản lý đơn hàng</string>
    <string name="accepted_orders">Đơn đang chuẩn bị</string>
    <string name="picked_orders">Đơn đang giao</string>
    <string name="picked_order">Đơn đã chuẩn bị, tiến hành giao</string>
    <string name="confirm_shipped">Xác nhận đã giao hàng</string>
    <string name="confirm_cancel">Hủy đơn hàng</string>
    <string name="delivery_history">Lịch sử giao hàng</string>
    <string name="revenue_statistics">Thống kê thu nhập</string>
    <string name="revenue_per_year">Thu nhập năm</string>
    <string name="success_delivery">Đơn giao thành công</string>
    <string name="cancel_order">Đơn đã hủy</string>
    <string name="revenue_today">Thu nhập hôm nay</string>
    <string name="revenue_special">Thu nhập theo khoảng thời gian</string>
    <string name="from_day">Từ ngày:</string>
    <string name="to_day">Đến ngày:</string>
    <string name="sum">Tổng</string>
    <string name="total">Thành tiền</string>
    <string name="shipping_fee">Phí giao hàng</string>
    <string name="merchant_commission">Hoa hồng (20%)</string>
    <string name="give_to_merchant">Tiền đưa cho nhà bán hàng</string>
    <string name="tien_thu_cua_khach">Tiền thu của khách</string>
    <string name="confirm">Xác nhận</string>
    <string name="confirm_picked">Xác nhận đã lấy hàng và tiến hành giao.</string>
    <string name="need_provide_enough_info">Bạn cần cung cấp đầy đủ thông tin.</string>
    <string name="confirm_open_maps">Bạn có cần chỉ đường không?</string>
    <string name="maps">Bản đồ</string>
    <string name="content_description_maps">directions</string>
    <string name="consumer_info">Thông tin khách hàng</string>
    <string name="token_expired">Token expired, Login again!</string>
</resources>