<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/layoutTaskbar" />

    <LinearLayout
        android:id="@+id/layoutTaskbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_top_border"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order"
            android:textSize="14sp"
            app:drawableTopCompat="@drawable/ic_receipt_24" />

        <TextView
            android:id="@+id/tvManager"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/manager"
            android:textSize="14sp"
            app:drawableTopCompat="@drawable/ic_assignment_24" />

        <TextView
            android:id="@+id/tvRevenue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/revenue"
            android:textSize="14sp"
            app:drawableTopCompat="@drawable/ic_monetization_24" />

        <TextView
            android:id="@+id/tvMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/me"
            android:textSize="14sp"
            app:drawableTopCompat="@drawable/ic_person_24" />
    </LinearLayout>
</RelativeLayout>