<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/extra_light_gray"
    tools:context=".LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutAppBar">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back_ios_24"
            app:title="@string/login"
            app:titleTextColor="#FFFFFF"
            android:id="@+id/toolbarLogin" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutProgressBar"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:id="@+id/etUsername"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextInput"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/show_password_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etPassword"
                android:imeOptions="actionDone"
                android:layout_marginBottom="15dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:textSize="20sp"
            android:fontFamily="sans-serif-thin"
            android:id="@+id/btnLogin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="#BF6600"
            android:id="@+id/tvForgotPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gotoregister"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/colorPrimary"
            android:id="@+id/tvGotoSignup"/>
    </LinearLayout>
</RelativeLayout>