<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/extra_light_gray">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:id="@+id/layoutAppBar"
        app:liftOnScroll="true"
        android:background="@color/colorPrimaryDark">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
            app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:title="@string/me"
                app:layout_collapseMode="pin">
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                app:strokeColor="@color/extra_light_gray"
                android:layout_margin="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:id="@+id/layoutProfile">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:orientation="horizontal"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:weightSum="5"
                        android:id="@+id/layoutNotLogin"
                        android:visibility="invisible"
                        android:elevation="0dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">
                        <com.google.android.material.button.MaterialButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/login"
                            android:id="@+id/btnLogin"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/or"/>
                        <com.google.android.material.button.MaterialButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/signup"
                            android:id="@+id/btnSignup"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="invisible"
                        android:id="@+id/layoutLogin"
                        android:elevation="0dp"
                        android:layout_centerVertical="true"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:id="@+id/ivProfile"
                            android:scaleType="centerCrop"
                            android:adjustViewBounds="false"
                            android:layout_gravity="center_horizontal"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:gravity="center"
                            android:fontFamily="sans-serif-condensed"
                            android:textColor="@color/light_blue"
                            android:textStyle="bold"
                            android:textAllCaps="true"
                            android:id="@+id/tvName"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:id="@+id/tvUsername"/>
                    </LinearLayout>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:enabled="false"
                    android:gravity="center_vertical"
                    android:text="@string/managerprofile"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:background="@drawable/bg_bottom_border"
                    android:drawablePadding="10dp"
                    android:paddingStart="10dp"
                    app:drawableStartCompat="@drawable/ic_edit_24"
                    app:drawableEndCompat="@drawable/ic_keyboard_arrow_right_24"
                    android:id="@+id/tvManagerProfile"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/delivery_history"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:background="@drawable/bg_bottom_border"
                    android:drawablePadding="10dp"
                    android:paddingStart="10dp"
                    app:drawableStartCompat="@drawable/ic_history_24"
                    app:drawableEndCompat="@drawable/ic_keyboard_arrow_right_24"
                    android:id="@+id/tvDeliveryHistory"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/setting"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:drawablePadding="10dp"
                    android:paddingStart="10dp"
                    app:drawableStartCompat="@drawable/ic_settings_24"
                    app:drawableEndCompat="@drawable/ic_keyboard_arrow_right_24"
                    android:id="@+id/tvSetting"
                    android:background="@drawable/bg_bottom_border"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/about"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:background="#FFFFFF"
                    android:drawablePadding="10dp"
                    android:paddingStart="10dp"
                    app:drawableStartCompat="@drawable/ic_info_24"
                    app:drawableEndCompat="@drawable/ic_keyboard_arrow_right_24"
                    android:id="@+id/tvAbout"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:id="@+id/tvLogout"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/light_red"
                    android:background="@drawable/bg_btn_logout"
                    android:layout_marginTop="30dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/appversion"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="100dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>