<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/extra_light_gray"
    tools:context=".OrderDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/layoutAppBar">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/order_info"
            app:titleTextColor="#FFFFFF"
            app:navigationIcon="@drawable/ic_arrow_back_ios_24"
            android:id="@+id/toolbar">
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutAppBar"
        android:layout_above="@id/layoutButtons"
        android:padding="10dp"
        android:id="@+id/layoutProgressBar">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvBranch"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="#000000"
            android:layout_marginBottom="5dp"
            android:text="@string/branch"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ivBranch"
            android:layout_below="@id/tvBranch"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivBranch"
            android:layout_alignTop="@id/ivBranch"
            android:textSize="23sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@android:color/holo_red_dark"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:id="@+id/tvBranchName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivBranch"
            android:layout_below="@id/tvBranchName"
            android:textSize="15sp"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="#000000"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:maxLines="3"
            android:drawablePadding="5dp"
            android:id="@+id/tvAddress"
            app:drawableStartCompat="@drawable/ic_location_on_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvOrders"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="#000000"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/ivBranch"
            android:layout_marginTop="10dp"
            android:text="@string/customer_order"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerView"
            android:layout_below="@+id/tvOrders"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:id="@+id/layoutButtons">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/picked_order"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/btnShipping"
            android:gravity="center"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_check_24"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_shipped"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/btnShipped"
            android:gravity="center"
            android:padding="10dp"
            app:drawableStartCompat="@drawable/ic_done_all_24"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_cancel"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:background="@color/light_red"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/btnCancelOrder"
            android:gravity="center"
            android:padding="10dp"
            app:drawableStartCompat="@drawable/ic_close_white_24"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</RelativeLayout>