<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/layoutAppBar">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/revenue_statistics"
            app:titleTextColor="#FFFFFF"
            app:navigationIcon="@drawable/ic_arrow_back_ios_24"
            android:id="@+id/toolbar">
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutProgressBar"
        android:layout_below="@id/layoutAppBar"
        android:layout_alignParentBottom="true"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitleRevenueToday"
            android:text="@string/revenue_today"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitleRevenueToday"
            android:text="0 VND"
            android:id="@+id/tvRevenueToday"
            android:gravity="center"
            android:textSize="25sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/light_red"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/revenue_special"
            android:id="@+id/tvTitleRevenueSpecial"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_above="@id/tvRevenueRange"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0 VND"
            android:id="@+id/tvRevenueRange"
            android:gravity="center"
            android:textSize="25sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/light_red"
            android:textStyle="bold"
            android:layout_above="@+id/tvFromDay"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_day"
            android:layout_above="@id/tvTitleToDay"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/tvTitleFromDay"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_day"
            android:layout_above="@id/ibSearch"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/tvTitleToDay"
            android:padding="5dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25/11/2020"
            android:layout_toEndOf="@id/tvTitleToDay"
            android:layout_alignBottom="@id/tvTitleFromDay"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000000"
            android:textSize="16sp"
            android:id="@+id/tvFromDay"
            android:padding="5dp"
            android:drawablePadding="5dp"
            app:drawableEndCompat="@drawable/ic_keyboard_arrow_down_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25/11/2020"
            android:layout_toEndOf="@id/tvTitleToDay"
            android:layout_alignBottom="@+id/tvTitleToDay"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000000"
            android:textSize="16sp"
            android:id="@+id/tvToDay"
            android:padding="5dp"
            android:drawablePadding="5dp"
            app:drawableEndCompat="@drawable/ic_keyboard_arrow_down_24"/>

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:id="@+id/ibSearch"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_search_24"
            android:background="@color/colorPrimary"
            android:layout_margin="10dp"/>
    </RelativeLayout>
</RelativeLayout>